--- a/happy_customers.ipynb
+++ b/happy_customers.ipynb
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -283,8 +283,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Acc = 0.94\n",
-      "Test Acc = 0.7307692307692307\n"
+      "Train Acc = 0.92\n",
+      "Test Acc = 0.7692307692307693\n"
      ]
     }
    ],
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -309,26 +309,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Run 0 \t Test Acc = 53.8%\n",
+      "Run 0 \t Test Acc = 57.7%\n",
       "Run 1 \t Test Acc = 50.0%\n",
-      "Run 2 \t Test Acc = 57.7%\n",
-      "Run 3 \t Test Acc = 57.7%\n",
-      "Run 4 \t Test Acc = 46.2%\n",
-      "Run 5 \t Test Acc = 69.2%\n",
-      "Run 6 \t Test Acc = 46.2%\n",
-      "Run 7 \t Test Acc = 69.2%\n",
+      "Run 2 \t Test Acc = 34.6%\n",
+      "Run 3 \t Test Acc = 46.2%\n",
+      "Run 4 \t Test Acc = 53.8%\n",
+      "Run 5 \t Test Acc = 65.4%\n",
+      "Run 6 \t Test Acc = 57.7%\n",
+      "Run 7 \t Test Acc = 57.7%\n",
       "Run 8 \t Test Acc = 46.2%\n",
-      "Run 9 \t Test Acc = 50.0%\n",
-      "Run 10 \t Test Acc = 65.4%\n",
-      "Run 11 \t Test Acc = 50.0%\n",
-      "Run 12 \t Test Acc = 53.8%\n",
+      "Run 9 \t Test Acc = 57.7%\n",
+      "Run 10 \t Test Acc = 53.8%\n",
+      "Run 11 \t Test Acc = 65.4%\n",
+      "Run 12 \t Test Acc = 46.2%\n",
       "Run 13 \t Test Acc = 46.2%\n",
-      "Run 14 \t Test Acc = 61.5%\n",
+      "Run 14 \t Test Acc = 65.4%\n",
       "Run 15 \t Test Acc = 53.8%\n",
-      "Run 16 \t Test Acc = 57.7%\n",
-      "Run 17 \t Test Acc = 57.7%\n",
-      "Run 18 \t Test Acc = 57.7%\n",
-      "Run 19 \t Test Acc = 46.2%\n"
+      "Run 16 \t Test Acc = 53.8%\n",
+      "Run 17 \t Test Acc = 50.0%\n",
+      "Run 18 \t Test Acc = 46.2%\n",
+      "Run 19 \t Test Acc = 50.0%\n"
      ]
     }
    ],
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -398,26 +398,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Run 0 \t Test Acc = 56.3%\n",
-      "Run 1 \t Test Acc = 58.0%\n",
+      "Run 0 \t Test Acc = 49.9%\n",
+      "Run 1 \t Test Acc = 57.1%\n",
       "Run 2 \t Test Acc = 58.8%\n",
-      "Run 3 \t Test Acc = 57.1%\n",
-      "Run 4 \t Test Acc = 57.1%\n",
-      "Run 5 \t Test Acc = 52.3%\n",
-      "Run 6 \t Test Acc = 61.9%\n",
-      "Run 7 \t Test Acc = 56.3%\n",
-      "Run 8 \t Test Acc = 57.2%\n",
-      "Run 9 \t Test Acc = 53.8%\n",
-      "Run 10 \t Test Acc = 62.0%\n",
-      "Run 11 \t Test Acc = 54.7%\n",
-      "Run 12 \t Test Acc = 54.8%\n",
+      "Run 3 \t Test Acc = 57.9%\n",
+      "Run 4 \t Test Acc = 57.2%\n",
+      "Run 5 \t Test Acc = 58.0%\n",
+      "Run 6 \t Test Acc = 51.7%\n",
+      "Run 7 \t Test Acc = 54.0%\n",
+      "Run 8 \t Test Acc = 52.3%\n",
+      "Run 9 \t Test Acc = 57.9%\n",
+      "Run 10 \t Test Acc = 56.4%\n",
+      "Run 11 \t Test Acc = 56.3%\n",
+      "Run 12 \t Test Acc = 53.1%\n",
       "Run 13 \t Test Acc = 55.5%\n",
-      "Run 14 \t Test Acc = 50.1%\n",
-      "Run 15 \t Test Acc = 59.5%\n",
-      "Run 16 \t Test Acc = 57.0%\n",
-      "Run 17 \t Test Acc = 58.7%\n",
-      "Run 18 \t Test Acc = 58.7%\n",
-      "Run 19 \t Test Acc = 50.8%\n"
+      "Run 14 \t Test Acc = 61.8%\n",
+      "Run 15 \t Test Acc = 49.1%\n",
+      "Run 16 \t Test Acc = 62.7%\n",
+      "Run 17 \t Test Acc = 54.8%\n",
+      "Run 18 \t Test Acc = 59.5%\n",
+      "Run 19 \t Test Acc = 65.0%\n"
      ]
     }
    ],
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -476,15 +476,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RandomForest \t Train = 86.3%   Test = 55.5%\n",
-      "XGBClassifier \t Train = 94.2%   Test = 57.9%\n",
-      "MLP \t Train = 95.2%   Test = 51.7%\n",
+      "RandomForest \t Train = 86.7%   Test = 58.7%\n",
+      "XGBClassifier \t Train = 93.2%   Test = 56.2%\n",
+      "MLP \t Train = 95.2%   Test = 54.1%\n",
       "No early stopping will be performed, last training weights will be used.\n",
       "No early stopping will be performed, last training weights will be used.\n",
       "No early stopping will be performed, last training weights will be used.\n",
       "No early stopping will be performed, last training weights will be used.\n",
       "No early stopping will be performed, last training weights will be used.\n",
-      "TabNet \t Train = 78.1%   Test = 61.2%\n"
+      "TabNet \t Train = 78.5%   Test = 65.8%\n"
      ]
     }
    ],
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -516,7 +516,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -551,10 +551,10 @@
     {
      "data": {
       "text/plain": [
-       "SelectKBest(k=4, score_func=<function chi2 at 0x7f81481bec80>)"
+       "SelectKBest(k=4, score_func=<function chi2 at 0x7f3a26130ae8>)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -581,7 +581,7 @@
        "       0.54107039])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -605,7 +605,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
